yaml/nginx-ingress-ds.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: nginx-ingress-controller
spec:
  template:
    metadata:
      labels:
        name: nginx-ingress-controller
    spec:
      # nodeSelector:
      #   role: nginx-ingress
      hostNetwork: true
      serviceAccountName: ingress
      containers:
      - image: registry.aegonthtf.com/template-dev/nginx-ingress:1.0.1
        imagePullPolicy: Always
        name: nginx-ingress
        ports:
        - containerPort: 80
          hostPort: 80
        - containerPort: 443
          hostPort: 443
        # Uncomment the lines below to enable extensive logging and/or customization of
        # NGINX configuration with configmaps
        args:
         - -v=3
         - -nginx-configmaps=default/nginx-config
         - -default-server-tls-secret=default/ingress-server-secret
