yaml/gitlab2-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab2.aegonthtf.com
spec:
  rules:
  - host: gitlab2.aegonthtf.com
    http:
      paths:
      - path: /coffee
        backend:
          serviceName: coffee-svc
          servicePort: 80
